[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://components/apps/ower_view/debt_card_ui.gd" id="1"]

[node name="DebtCardUI" type="PanelContainer"]
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Debt"

[node name="AmountLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "$0.00"
